<resources>
    <string name="app_name">Notas</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="Acualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="operacionarealizar">Operacion a realizar</string>
    <string name="deceaeliminar">Esta seguro de Eliminar?</string>
    <string name="advertenciaeliminar">Si elimina este registro no se podra recuperar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>


    <string name="recordatorionoeliminado">Recordatorio No Eliminado</string>
    <string name="recordatorioeliminado">Recordatorio Eliminado</string>
    <string name="recordatorioinsertado">Recordatorio Insertado</string>
    <string name="recordatorionoinsertado">Recordatorio no Insertado</string>
    <string name="recordatorioactualizado">Recordatorio Actualizado</string>
    <string name="recordatorionoactualizado">Recordatorio no Actualizado</string>
    <string name="agregarrecordatorio">Agregar Recordatorio</string>
    <string name="actualizarrecordatorio">Actualizar Recordatorio</string>


    <string name="doscamposobligatorios">Los 2 Campos son Obligatorios</string>


    <string name="fechacreacion">Fecha de creacion:</string>
    <string name="fechacumplimiento">"Fecha cumplimiento:</string>
    <string name="horacumplimiento">Hora cumplimiento:</string>
    <string name="estatuscumplida">Estatus Tarea:Cumplida</string>
    <string name="estatusnocumplida">Estatus Tarea:no Cumplida</string>

    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>


    <string name="notas">Notas</string>
    <string name="tareas">Tareas</string>


    <string name="mostrararchivos">Mostrar Archivos</string>
    <string name="mostrarrecordatorios">Mostrar Recordatorios</string>
    <string name="actualizar">Actualizar</string>
    <string name="Eliminar">Eliminar</string>


    <string name="agregarnota">Agregar Nota</string>
    <string name="actualizarnota">Actualizar Nota</string>
    <string name="notainsertada">Nota Insertada</string>
    <string name="notanoinsertada">Nota no Insertada</string>
    <string name="notaactualizada">Nota Actualizada</string>
    <string name="notanoactualizada">Nota no Actualizada</string>
    <string name="notaeliminada">Nota Eliminada</string>
    <string name="notanoeliminada">Nota No Eliminada</string>

    <string name="marcarcomocumplida">Marcar como cumplida</string>
    <string name="marcarcomonocumplida">Marcar como no cumplida</string>


    <string name="agregartarea">Agregar Tarea</string>
    <string name="actualizartarea">Actualizar Tarea</string>
    <string name="tareainsertada">Tarea Insertada</string>
    <string name="tareanoinsertada">Tarea no Insertada</string>
    <string name="tareaactualizada">Tarea Actualizada</string>
    <string name="tareanoactualizada">Tarea no Actualizada</string>
    <string name="tareaeliminada">Tarea Eliminada</string>
    <string name="tareanoeliminada">Tarea No Eliminada</string>

    <string name="cuatrocamposobligatorios">Los 4 Campos son Obligatorios</string>

    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>

    <string name="fecha1">Fecha</string>
    <string name="hora1">Hora</string>

    <string name="buscar">Buscar</string>


    <string name="addmultimedia">Agregar Archivo</string>


    <string name="archivoinsertado">Registro Insertado</string>
    <string name="archivonoinsertado">Registro no Insertado</string>
    <string name="archivoeliminado">Registro Eliminado</string>
    <string name="archivonoeliminado">Registro no eliminado</string>


    <string name="archivoadjuntar">Debes poner la descripcion y adjuntar archivo</string>
    <string name="permisonecesario">Este permiso es necesario</string>

    <string name="str_en" >English</string>
    <string name="str_es" >Español</string>
    <string name="dialogo">Cambiar idioma</string>
    <string name="play">Reproducir</string>
    <string name="stop_record">Detener</string>
    <string name="grabar">Grabar</string>

    <string-array name="languages" >
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>













</resources>
