<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gerardo.myapplication.appupdatenotas">


    <RelativeLayout
        android:layout_width="377dp"
        android:layout_height="337dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="4dp">


        <EditText
            android:id="@+id/txttitulo"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtdescripcion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txttitulo"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnsalir"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txthora"
            android:layout_toEndOf="@+id/btnoperacion"
            android:layout_toRightOf="@+id/btnoperacion"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/salir" />

        <Button
            android:id="@+id/btnoperacion"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txthora"
            android:text="@string/guardar" />

        <EditText
            android:id="@+id/txtfecha"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtdescripcion"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/fecha1"
            android:inputType="none" />

        <EditText
            android:id="@+id/txthora"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtfecha"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/hora1"
            android:inputType="none" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
