<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gerardo.myapplication.appupdatenotas">


    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="167dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="4dp">

        <EditText
            android:id="@+id/txtfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/fecha1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txthora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtfecha"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/hora1"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnsalir"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnagregar"
            android:layout_alignBottom="@+id/btnagregar"
            android:layout_toEndOf="@+id/btnagregar"
            android:layout_toRightOf="@+id/btnagregar"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/salir" />

        <Button
            android:id="@+id/btnagregar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txthora"
            android:text="@string/guardar" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
